<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="home"
        android:id="@+id/rumah"
        android:visible="true"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        >
    </item>
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="post"
        >
    </item>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="setting">
    </item>
</menu>